--- a/provisioners/roles/apache/tasks/main.yml
+++ b/provisioners/roles/apache/tasks/main.yml
@@ -2,17 +2,21 @@
 # tasks file for apache
 - name: install apache
   yum: name=httpd-devel
-  sudo: yes
+  become: yes
+  become_method: sudo
 
 - name: pip install mod_wsgi
   pip: name=mod_wsgi
-  sudo: yes
+  become: yes
+  become_method: sudo
 
 - name: start apache
   service: name=httpd state=started enabled=yes
-  sudo: yes
+  become: yes
+  become_method: sudo
 
 - name: disable apache trace
   lineinfile: dest=/etc/httpd/conf/httpd.conf state=present line="TraceEnable off"
-  sudo: yes
+  become: yes
+  become_method: sudo
     
